--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix which describes the priority of tasks.">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="body">
+    <header class="header">
+      <img class="header__image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix which describes the priority of tasks.">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <main class="main">
+      <section class="section add-section">
+        <label class="add-section__title section-title" for="new-task">Add Item</label>
+        <div class="add-section__wrapper">
+          <input id="new-task"class="add-section__input input-task" type="text">
+          <button class="add-section__button button">Add</button>
         </div>
       </section>
-      <section>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove an element from the list.">
+      <section class="section todo-section">
+        <h3 class="todo-section__title section-title">Todo</h3>
+        <ul class="todo-section__list list" id="incomplete-tasks">
+          <li class="todo-section__item list__item">
+            <input class="list__input input-checkbox" type="checkbox">
+            <label class="list__label label-task">Pay Bills</label>
+            <input type="text" class="list__input input-task">
+            <button class="button-edit button">Edit</button>
+            <button class="button-delete button">
+              <img class="button__image" src="./remove.svg" alt="Remove an element from the list.">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove an element from the list.">
+          <li class="todo-section__item edit-mode list__item">
+            <input class="list__input input-checkbox" type="checkbox">
+            <label class="list__label label-task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="list__input input-task">
+            <button class="button-edit button">Save</button>
+            <button class="button-delete button">
+              <img class="button__image" src="./remove.svg" alt="Remove an element from the list.">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove an element from the list.">
+      <section class="section completed-section">
+        <h3 class="completed-section__title section-title">Completed</h3>
+        <ul class="completed-section__list list" id="completed-tasks">
+          <li class="completed-section__item list__item">
+            <input class="list__input input-checkbox" type="checkbox" checked>
+            <label class="list__label label-task">See the Doctor</label>
+            <input type="text" class="list__input input-task">
+            <button class="button-edit button">Edit</button>
+            <button class="button-delete button">
+              <img class="button__image" src="./remove.svg" alt="Remove an element from the list.">
             </button>
           </li>
         </ul>
